--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="cabeçalho">
         <img src="alurastart logo (1).png" alt="">
-        <ul>
-            <li>Escola</li>
-            <li>Estudante</li>
+        <ul class="cabeçalho-lista">
+            <li class="cabeçalho-lista-item">Escola</li>
+            <li class="cabeçalho-lista-item">Estudantes</li>
         </ul>
     </header>
 </body>
