--- a/index.html
+++ b/index.html
@@ -23,6 +23,20 @@
             <img class="escola-img" src="Formula-bro.png" alt="">
 
     </section>
+    <section class="estudantes">
+        <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+    <img class="estudante-imagem" src="Gabriel Barbosa.jpg" alt="">
+    <img class="estudante-imagem" src="Bruno Henrique.jpg" alt="">
+    <img class="estudante-imagem" src="Arrascaeta.jpg" alt="">
+    <img class="estudante-imagem" src="Pedro.jpeg" alt="">
+    <img class="estudante-imagem" src="Vitinho.jpg" alt="">
+    <img class="estudante-imagem" src="Rodinei.jpg" alt="">
+    <img class="estudante-imagem" src="Wiliam Arao.jpeg" alt="">
+    <img class="estudante-imagem" src="Jorge Jesus.jpeg" alt="">
+    <img class="estudante-imagem" src="Cristiano Ronaldo.jpg" alt="">
+    <img class="estudante-imagem" src="Messi.jpg" alt="">
+
+    </section>
 
 </body>
 </html>
