--- a/index.html
+++ b/index.html
@@ -26,15 +26,64 @@
     <section class="estudantes">
         <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
     <img class="estudante-imagem" src="Gabriel Barbosa.jpg" alt="">
+    <h3>Gabriel Barbosa</h3>
+    <img class="estudante-icone" src="instagram.png" alt="">
+    <img class="estudante-icone" src="linkedin.png" alt="">
+    <img class="estudante-icone" src="github.png" alt="">
+
     <img class="estudante-imagem" src="Bruno Henrique.jpg" alt="">
+    <h3>Bruno Henrique</h3>
+    <img class="estudante-icone" src="instagram.png" alt="">
+    <img class="estudante-icone" src="linkedin.png" alt="">
+    <img class="estudante-icone" src="github.png" alt="">
+    
     <img class="estudante-imagem" src="Arrascaeta.jpg" alt="">
+    <h3>Giorgian Arrascaeta</h3>
+    <img class="estudante-icone" src="instagram.png" alt="">
+    <img class="estudante-icone" src="linkedin.png" alt="">
+    <img class="estudante-icone" src="github.png" alt="">
+
     <img class="estudante-imagem" src="Pedro.jpeg" alt="">
+    <h3>Pedro</h3>
+    <img class="estudante-icone" src="instagram.png" alt="">
+    <img class="estudante-icone" src="linkedin.png" alt="">
+    <img class="estudante-icone" src="github.png" alt="">
+
     <img class="estudante-imagem" src="Vitinho.jpg" alt="">
+    <h3>Vitinho</h3>
+    <img class="estudante-icone" src="instagram.png" alt="">
+    <img class="estudante-icone" src="linkedin.png" alt="">
+    <img class="estudante-icone" src="github.png" alt="">
+
     <img class="estudante-imagem" src="Rodinei.jpg" alt="">
+    <h3>Rodinei</h3>
+    <img class="estudante-icone" src="instagram.png" alt="">
+    <img class="estudante-icone" src="linkedin.png" alt="">
+    <img class="estudante-icone" src="github.png" alt="">
+
     <img class="estudante-imagem" src="Wiliam Arao.jpeg" alt="">
+    <h3>Wiliam Arão</h3>
+    <img class="estudante-icone" src="instagram.png" alt="">
+    <img class="estudante-icone" src="linkedin.png" alt="">
+    <img class="estudante-icone" src="github.png" alt="">
+
     <img class="estudante-imagem" src="Jorge Jesus.jpeg" alt="">
+    <h3>Jorge Jesus</h3>
+    <img class="estudante-icone" src="instagram.png" alt="">
+    <img class="estudante-icone" src="linkedin.png" alt="">
+    <img class="estudante-icone" src="github.png" alt="">
+
     <img class="estudante-imagem" src="Cristiano Ronaldo.jpg" alt="">
+    <h3>Cristiano Ronaldo</h3>
+    <img class="estudante-icone" src="instagram.png" alt="">
+    <img class="estudante-icone" src="linkedin.png" alt="">
+    <img class="estudante-icone" src="github.png" alt="">
+
     <img class="estudante-imagem" src="Messi.jpg" alt="">
+    <h3>Lionel Messi</h3>
+    <img class="estudante-icone" src="instagram.png" alt="">
+    <img class="estudante-icone" src="linkedin.png" alt="">
+    <img class="estudante-icone" src="github.png" alt="">
 
     </section>
 
